@@ -1,8 +1,7 @@
 ﻿########################################################
 # Boysfood VideoPortal
 ########################################################
-start=http://www.boysfood.com/categories/
-#start=http://www.boysfood.com/
+start=http://www.boysfood.com/
 #header=Cookie|bfsession=1
 catcher=boysfood.com
 ########################################################
@@ -21,27 +20,14 @@ item_url_build=%s
 item_infos=bold;">([^"]+)</a></div>.+?<a href="(http://www.boysfood.com/cgi-bin/bfn.cgi[?]search=[^"]+)"><img border="[^"]+" src="(http[^"]+jpg)"
 item_order=title|url|icon
 item_skill=rss
-item_info_name=title
-item_info_build=video.devil.locale|30100
 item_url_build=%s
-########################################################
-# Search suggestion
-########################################################
-#item_infos=<a href="([^"]+)" style="[^"]+" title="[^"]+">Lucky Dip Video</a></div></div>
-#item_order=url
-#item_skill=rss
-#item_info_name=title
-#item_info_build=video.devil.locale|30110
-#item_info_name=icon
-#item_info_build=video.devil.image|suggestion.png
-#item_url_build=%s
 ########################################################
 # Direct Links
 ########################################################
-title= All Videos
+title=video.devil.locale|30100
 type=once
 icon=video.devil.image|face_kiss.png
-url=http://www.boysfood.com/
+url=http://www.boysfood.com/categories/
 ########################################################
 # Next
 ########################################################
